# cuosqp_isye6679

./: CMakeLists.txt  README.md  cpu_verison.c  cpu_version.cpp  cpu_version_final.c  cublas.cu  cusparse_cublas_funcs.cu  data_generation.py  diagonalMultiplication.cu  kernel.cu  main.cu  osqp_cuosqp_comparison.py  support.h  test_cusparse_cublas_funcs.cu
data/instance-15x1015/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x115/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x16/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x17/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x20/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x25/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-15x5015/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x3001/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x3002/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x3005/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x3010/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x3100/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x4000/: P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-3000x8000/: P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-300x1300/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-300x301/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  u.txt
data/instance-300x302/: A.txt  P.txt  l.txt  osqp_sol.txt  q.txt  (+1 more)
(+149 files in other folders)
